tegin pildid korda

--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -43,6 +43,6 @@
     </table>
     <h2>Link kasutatud materjalile:</h2>
     <a href="https://eopearhiiv.edu.ee/e-kursused/eucip/arendus/1221_koskmudel.html">Link</a>
-    <img src="/pildid/gif.gif"/>
+    <img src="../pildid/gif.gif"/>
 </body>
 </html>
