tegin teine skeemi korda

--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -22,7 +22,7 @@
         <p>Pikaajaline faas, kus süsteemi muudetakse vastavalt kasutajate tagasisidele, keskkonnamuutustele või uutele nõudmistele. Kõiki eelnevaid faase korratakse süsteemi muutmise käigus.</p>
     </ol>
     <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="/pildid/image2.1.jpeg", alt="visuaalne skeem"/>
+    <img src="../pildid/image2.1.jpeg", alt="visuaalne skeem"/>
     <table>
         <tr>
             <td><b>Waterfalli head</b></td>
