lisasin teised html failid teiste muudelite jaoks

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <hr/>
       <ul>
          <li> <a href="elutsykkel/waterfall.html">Waterfalli arendusmudel</a> </li>
+         <li> <a href="elutsykkel/inkrementaalne.html">Waterfalli arendusmudel</a> </li>
+         <li> <a href="elutsykkel/spriraal.html">Waterfalli arendusmudel</a> </li>
+         <li> <a href="elutsykkel/prototuupimine.html">Waterfalli arendusmudel</a> </li>
       </ul>
       <br/>
       <br/>
