--- a/elutsykkel/inkrementaalne.html
+++ b/elutsykkel/inkrementaalne.html
@@ -3,9 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inkrementaalne arendusmudel</title>
 </head>
 <body>
-    
+   <h1>Inkrementaalne arendusmudel</h1>
+   <p>
+    Inkrementaalne mudel jagab tarkvaraprojekti etappideks ehk inkrementideks, kus iga uus inkrement lisab süsteemile uusi funktsionaalsusi. Selle aluseks on süsteemi järk-järguline (inkrementaalne) laiendamine. Iga valminud inkrement liidetakse olemasoleva süsteemiga, võimaldades varajast tagasisidet ja võimalust arendusprotsessi käigus täpsustada järgmiste osade nõudeid. Alistair Cockburn on rõhutanud, et inkrementaalne arendus järgib kindlat ajagraafikut ja on etapiviisiline, samas kui Ian Sommerville näeb seda osana iteratiivsest lähenemisest, mis hõlmab vajadusel ka olemasoleva tarkvara ümbertegemist ja täiustamist.
+   </p>
+   <h2>Inkrementaalne vs Iteratiivne</h2>
+   <p>Inkrementaalset mudelit aetakse tihti segamini iteratiivse mudeliga, kuid nende vahel on oluline erinevus.</p>
+    <ul>
+        <li><b>Inkrementaalse mudeli</b> puhul keskendutakse uute osade lisamisele olemasolevale süsteemile.</li>
+        <li><b>Iteratiivses mudelis</b> toimub olemasolevate osade korduv täiustamine ja ümberkujundamine.</li>
+    </ul>
+    <h2>Inkrementaalse mudeli etapid on järgmised:</h2>
+    <ol>
+        <li><b>Nõuete määratlemine üldisel tasandil.</b></li>
+        <p>Nõuded jagatakse tähtsamateks ja vähemtähtsateks.</p>
+        <li><b>Tarneosade määramine.</b></li>
+        <p>Koostatakse plaan, millised tarkvara osad tarnitakse ja millises järjekorras.</p>
+        <li><b>Kõrgema prioriteediga osade detailiseerimine ja arendus.</b></li>
+        <p>Esimesena võetakse ette kõrgema prioriteediga osad ja arendatakse neid.</p>
+        <li><b>Töö käigus olevate osade külmutamine.</b></li>
+        <p>Töös oleva osa nõudeid ei muudeta (kui väga vajalik, siis tehakse seda hiljem).</p>
+        <li><b>Tarnimine ja kliendile katsetamiseks andmine.</b></li>
+        <p>Valmis osa tarnitakse kliendile, kes saab seda katsetada ja anda tagasisidet.</p>
+        <li><b>Tagasiside alusel nõuete täpsustamine.</b></li>
+        <p>Järgnevate osade jaoks täpsustatakse nõudeid vastavalt saadud tagasisidele.</p>
+    </ol>
+   <h2>Visuaalselt protsess näeb välja niimodi:</h2>
+   <img src="../pildid/incremental schema.jpeg", alt="Inkrementaalne mudeli visuaalne skeem"/>
+   <table>
+       <tr>
+           <td><b>Inkrementaalse mudeli head</b></td>
+           <td><b>Inkrementaalse mudeli vead</b></td>
+       </tr>
+       <tr>
+           <td>Nõuete muutmine on soodsam</td>
+           <td>Progressi jälgimine on keeruline</td>
+       </tr>
+       <tr>
+           <td>Varajane tagasiside ja kasutatavus</td>
+           <td>Pdev muutmine võib kahjustada süsteemi struktuuri</td>
+       </tr>
+       <tr>
+           <td>Kiire kasutuselevõtt</td>
+           <td>Refaktoreerimise vajadus</td>
+       </tr>
+   </table>
+   <h2>Agiilsed arendusmeetodid</h2>
+   <p><b>Agiilsed meetodid</b> põhinevad inkrementaalsel mudelil, pakkudes täiendavat paindlikkust ja keskendudes koostööle. Erinevalt klassikalistest mudelitest, nagu koskmudel, ei nõua iteratiivsed arendusmudelid kõikehõlmavat algdokumentatsiooni ega lõplikku kasutajavajaduste lukustamist. Iteratiivne lähenemine võimaldab paindlikult muuta süsteemi, saada varajast tagasisidet ja testida lahendusi varakult.</p>
+   <p><b>Agile Manifesto (2001)</b> rõhutab inimesi ja koostööd klientidega, töötava tarkvara tähtsust ning valmisolekut muudatusteks:</p>
+   <ul>
+        <li>Inimesed ja suhtlemine on tähtsamad kui protsessid ja tööriistad.</li>
+        <li>Töötav tarkvara on tähtsam kui dokumentatsioon.</li>
+        <li>Koostöö kliendiga on tähtsam kui läbirääkimised lepingu üle.</li>
+        <li>Muudatussoovidele vastutulek on tähtsam kui plaani järgmine.</li>
+   </ul>
+   <p>Öeldakse, et agiilmeetoditega saavutatakse parem tulemus sama raha eest, aga agiilmeetoditega on raskem ette planeerida, millal tarkvara mingi funktsioon valmis saab - <i>„Agile process will provide the most bang for the buck, but won't say exactly when that bang will be".</i></p>
+   <p>Tuntumad ja levinumad agiilsed arendusmeetodid on:</p>
+    <ul>
+        <li><b>Ekstreemprogrammeerimine (XP)</b> lühemad tsüklid, paarisprogrammeerimine, automaatsed testid.</li>
+        <li>Scrum - töö jaotatakse sprintideks, mille jooksul tehakse kindlad ülesanded.</li>
+        <li>Feature Driven Development (FDD) - keskendub konkreetsete funktsioonide arendamisele.</li>
+        <li>Open Unified Process (OpenUP) - hübriid, mis kombineerib traditsioonilisi ja agiilseid lähenemisi.</li>
+    </ul>
+    <h3>Ekstreemprogrammeerimine (XP)</h3>
+    <p>Ekstreemprogrammeerimine (XP) on üks tuntumaid agiilseid meetodeid, mis keskendub lühikestele ja intensiivsetele arendustsüklitele. XP erineb klassikalistest arendusmudelitest, kus arendustsüklid võivad kesta kuid või isegi aastaid – iga tsükkel kestab XP-s vaid päevi või nädalaid. XP-s kirjutatakse enne kodeerimist automatiseeritud testid, mille tarkvara peab läbima. Programmeerimine toimub paarides (paarisprogrammeerimine), kus kaks programmeerijat töötavad koos ühe koodilõigu kallal. Kui kood läbib testid, loetakse antud iteratsioon edukaks ja lõpetatuks.</p>
+   <h2>Link kasutatud materjalile:</h2>
+   <a href="https://eopearhiiv.edu.ee/e-kursused/eucip/arendus/1222_inkrementaalne_arendusmudel.html">Link</a>
+   </br>
+   </br>
+   <img src="../pildid/transformers-megatron.gif">
 </body>
 </html>
