--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Waterfall arendusmudel</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
         <p>Pikaajaline faas, kus süsteemi muudetakse vastavalt kasutajate tagasisidele, keskkonnamuutustele või uutele nõudmistele. Kõiki eelnevaid faase korratakse süsteemi muutmise käigus.</p>
     </ol>
     <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="../pildid/image2.1.jpeg", alt="visuaalne skeem"/>
+    <img src="../pildid/waterfall schema.jpeg", alt="Waterfall visuaalne skeem"/>
     <table>
         <tr>
             <td><b>Waterfalli head</b></td>
@@ -43,6 +44,8 @@
     </table>
     <h2>Link kasutatud materjalile:</h2>
     <a href="https://eopearhiiv.edu.ee/e-kursused/eucip/arendus/1221_koskmudel.html">Link</a>
-    <img src="../pildid/gif.gif"/>
+    </br>
+    </br>
+    <img src="../pildid/waterfall developer.gif"/>
 </body>
 </html>
