lisasin endast foto

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <td>Anna Fomina</td>
             <td>Olen õpilane</td>
             <td>Valgast</td>
-            <td>siia hiljem pilt</td>
+            <td> <img src="/pildid/minu-foto.jpg" height="300"></td>
          </tr>
          <tr>
             <td colspan="4"><a href="https://github.com/fomi-ann">Siin on minu github profiil</a></td>
