--- a/elutsykkel/waterfall.html
+++ b/elutsykkel/waterfall.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Waterfall arendusmudel</title>
 </head>
 <body>
     <h1>Waterfall arendusmudel</h1>
-    <p>On esimene kirjeldatud tarkvarasüsteemi elutsükli mudel. Mudeli autoriks on Winston W. Royce, oma mudeli ta kirjeldas aastal 1970. Mudeli aluseks on tavaline tootmisprotsess ja selle faasid.</p>
+    <p>
+        See on esimene kirjeldatud tarkvarasüsteemi elutsükli mudel. Mudeli autor on Winston W. Royce, kes kirjeldas oma mudelit aastal 1970. Mudeli aluseks on tavaline tootmisprotsess ja selle faasid.
+    </p>
     <h2>Waterfall mudeli etapid on järgmised:</h2>
     <ol>
         <li><b>Nõuete määramine.</b></li>
@@ -26,8 +27,8 @@
     <img src="../pildid/waterfall schema.jpeg", alt="Waterfall visuaalne skeem"/>
     <table>
         <tr>
-            <td><b>Waterfalli head</b></td>
-            <td><b>Waterfalli vead</b></td>
+            <td><b>Waterfall mudeli head</b></td>
+            <td><b>Waterfall mudeli vead</b></td>
         </tr>
         <tr>
             <td>Kasutab selget struktuuri</td>
@@ -39,7 +40,7 @@
         </tr>
         <tr>
             <td>Hästi edastab informatsioon edasi</td>
-            <td>Toode testida saab alles pärast valmimist</td>
+            <td>Toode saab testida alles pärast valmimist</td>
         </tr>
     </table>
     <h2>Link kasutatud materjalile:</h2>
