tegin valmis veebilehte struktuuri main, lowercase ja uppercase jaoks

--- a/casevahendid/main.html
+++ b/casevahendid/main.html
@@ -7,12 +7,20 @@
 </head>
 <body>
     <h1>CASE vahendid</h1>
-<!--Mis on case vahendid-->
-<!--Kuidas jaotatakse case vahemdeid-->
-<!--Mis on case vahendid-->
-<!--mille jaoks neid kasutatakse-->
-<!--Milliseid vahendeid saab kasutada Agile arendusmudeli elutsüklis mida -->
-<!--Milliseid vahendeid olen ise juba kasutanud-->
-<!--Kasutatud materjal-->
+    <h2>Mis on CASE vahendid vahendid</h2>
+    <p>text</p>
+    <h2>Kuidas jaotatakse CASE vahemdeid</h2>
+    <p>text</p>
+    <ul>
+        <li><a href="/casevahendid/uppercase.html">UPPERCASE</a></li>
+        <li><a href="/casevahendid/lowercase.html">lowercase</a></li>
+    </ul>
+    <h2>Mille jaoks neid kasutatakse</h2>
+    <p>text</p>
+    <h2>Milliseid vahendeid saab kasutada Agile arendusmudeli elutsüklis?</h2>
+    <h3>Arendusmudeli elutsükli etapid</h3>
+    <p>text</p>
+
+    <h2>Link kasutatud materjalile</h2>
 </body>
 </html>
