--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
          <li> <a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a> </li>
          <li> <a href="elutsykkel/spriraal.html">Spiraalmudel</a> </li>
          <li> <a href="elutsykkel/prototuupimine.html">Prototüüpimine</a> </li>
+         <li> <a href="casevahendid/main.html">CASE vahendid</a></li>
       </ul>
       <br/>
       <br/>
