tegin main konspekti

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <td>Anna Fomina</td>
             <td>Olen õpilane</td>
             <td>Valgast</td>
-            <td> <img src="./pildid/minu-foto.jpg" height="300", alt="Anna Fomina portrait"></td>
+            <td> <img src="./pildid/minu-foto.jpg" height="300" alt="Anna Fomina portrait"></td>
          </tr>
          <tr>
             <td colspan="4"><a href="https://github.com/fomi-ann">Siin on minu github profiil</a></td>
