--- a/casevahendid/main.html
+++ b/casevahendid/main.html
@@ -7,16 +7,29 @@
 </head>
 <body>
     <h1>CASE vahendid</h1>
-    <h2>Mis on CASE vahendid vahendid</h2>
-    <p>text</p>
+    <h2>Mis on CASE vahendid?</h2>
+    <p><b>CASE (Computer-Aided Software Engineering) vahendid</b> on tarkvaraarenduse abivahendid, mis aitavad arendajatel süsteemide projekteerimisel, arendamisel, testimisel ja hooldamisel. Need vahendid toetavad kõiki tarkvaraarenduse etappe, võimaldades protsesside automatiseerimist ja kvaliteedi tagamist.</p>
     <h2>Kuidas jaotatakse CASE vahemdeid</h2>
-    <p>text</p>
+    <p>CASE vahendid jaotatakse järgmistesse kategooriatesse:
     <ul>
-        <li><a href="/casevahendid/uppercase.html">UPPERCASE</a></li>
-        <li><a href="/casevahendid/lowercase.html">lowercase</a></li>
+        <li><a href="/casevahendid/uppercase.html">UPPER CASE tools</a> - „ülemise taseme" CASE vahendid</li>
+            <p>
+                Need on üldiselt kõikide tarkvaraprotsesside toetamiseks mõeldud vahendid, mis hõlmavad näiteks projektijuhtimise, analüüsi ja disaini tööriistu.
+            </p>
+            <li><a href="/casevahendid/lowercase.html">lower CASE tools</a> - „alumise taseme" CASE vahendid</li>
+            <p>
+                Need on suunatud konkreetsete tarkvaraarenduse etappide (nt koodigeneratsioon, testimine) toetamiseks. Näiteks disainivahendid, testimisvahendid jne.
+            </p>
     </ul>
-    <h2>Mille jaoks neid kasutatakse</h2>
-    <p>text</p>
+    <h2>Mille jaoks neid kasutatakse?</h2>
+    <p>CASE vahendeid kasutatakse tarkvaraarenduse kõikide etappide toetamiseks:
+
+        Analüüs ja disain – abistavad süsteemi nõuete kogumisel ja arhitektuuri loomisel.
+        Koodigeneratsioon – automaatne koodi kirjutamine vastavalt loodud disainile.
+        Testimine – tarkvara kvaliteedi tagamiseks kasutatavad tööriistad, mis võimaldavad testide automatiseerimist.
+        Hooldus – toed tarkvara pideva täiustamise ja veaparanduse protsessidele.
+    
+    Kokkuvõttes aitavad CASE vahendid arenduse efektiivsust ja kvaliteeti, vähendades käsitsi tehtavat tööd ja tagades parema dokumentatsiooni.</p>
     <h2>Milliseid vahendeid saab kasutada Agile arendusmudeli elutsüklis?</h2>
     <h3>Arendusmudeli elutsükli etapid</h3>
     <p>text</p>
