täiendasin uppercase ja lowercase konspektid

--- a/casevahendid/main.html
+++ b/casevahendid/main.html
@@ -23,17 +23,27 @@
     </ul>
     <h2>Mille jaoks neid kasutatakse?</h2>
     <p>CASE vahendeid kasutatakse tarkvaraarenduse kõikide etappide toetamiseks:
-
-        Analüüs ja disain – abistavad süsteemi nõuete kogumisel ja arhitektuuri loomisel.
-        Koodigeneratsioon – automaatne koodi kirjutamine vastavalt loodud disainile.
-        Testimine – tarkvara kvaliteedi tagamiseks kasutatavad tööriistad, mis võimaldavad testide automatiseerimist.
-        Hooldus – toed tarkvara pideva täiustamise ja veaparanduse protsessidele.
-    
-    Kokkuvõttes aitavad CASE vahendid arenduse efektiivsust ja kvaliteeti, vähendades käsitsi tehtavat tööd ja tagades parema dokumentatsiooni.</p>
+    <ul>
+        <li><b>Analüüs ja disain</b> – abistavad süsteemi nõuete kogumisel ja arhitektuuri loomisel.</li>
+        <li><b>Koodigeneratsioon</b> – automaatne koodi kirjutamine vastavalt loodud disainile.</li>
+        <li><b>Testimine</b> – tarkvara kvaliteedi tagamiseks kasutatavad tööriistad, mis võimaldavad testide automatiseerimist.</li>
+        <li><b>Hooldus</b> – toed tarkvara pideva täiustamise ja veaparanduse protsessidele.</li>
+    </ul>
     <h2>Milliseid vahendeid saab kasutada Agile arendusmudeli elutsüklis?</h2>
-    <h3>Arendusmudeli elutsükli etapid</h3>
-    <p>text</p>
-
+    <ol>
+        <li><b><i>Nõuete määratlemine üldisel tasandil:</i></b></li>
+        <p>Jira, Azure DevOps, Confluence</p>
+        <li><b><i>Tarneosade määramine:</i></b></li>
+        <p>Jira, Trello, Miro</p>
+        <li><b><i>Kõrgema prioriteediga osade detailiseerimine ja arendus:</i></b></li>
+        <p>Jira, VersionOne, Asana</p>
+        <li><b><i>Töö käigus olevate osade külmutamine:</i></b></li>
+        <p>Git(GitHub või GitLab), Bitbucket</p>
+        <li><b><i>Tarnimine ja kliendile katsetamiseks andmine:</i></b></li>
+        <p>Jenkins, CircleCI, Docker, TestRail</p>
+        <li><b><i>Tagasiside alusel nõuete täpsustamine:</i></b></li>
+        <p>Jira, UserVoice, Productboard, Miro</p>
+    </ol>
     <h2>Link kasutatud materjalile</h2>
 </body>
 </html>
