--- a/casevahendid/uppercase.html
+++ b/casevahendid/uppercase.html
@@ -8,10 +8,12 @@
 <body>
     <h1>UPPERCASE vahendid</h1>
     
-    <h2>Mis on UPPERCASE vahendid</h2>
-    <p>text</p>
-    <h2>Mille jaoks neid kasutatakse</h2>
-    <p>text</p>
+    <h2>Mis on UPPERCASE vahendid ja mille jaoks neid kasutatakse?</h2>
+    <p>„ülemise taseme" CASE-vahendid (upper CASE tools) toetavad analüüsi ja projekteerimist. Peamiselt on nad kasutusel kasutajanõuete analüüsimisel ja dokumenteerimisel. Nad on ennekõike mõeldud visualiseerimiseks, erinevate skeemide koostamiseks ja ka dokumentatsiooni genereerimiseks. nad toetavad traditsiooniliste diagrammikeelte kasutamist (olem-seos diagrammid, andmemudelid, UML-skeemid, jne).
+    </br>
+    </br>
+    <i>Näiteks: Jira, Confluence, draw.io, Trello, VersionOne, Asana, Git, Bitbucket, Jenkins, Docker, TestRail jt.</i>
+    </p>
     <h2>Milliseid UPPERCASE vahendeid olen ise juba kasutanud</h2>
     
     <h3>Esimene töörist</h3>
