lisan Big Bang konspekt

--- a/elutsykkel/bigbang.html
+++ b/elutsykkel/bigbang.html
@@ -6,44 +6,45 @@
     <title>Big Bang arendusmudel</title>
 </head>
 <body>
-    <h1>mudel</h1>
-    <p>description
+    <h1>Big Bang arendusmudel</h1>
+    <p>Big Bang mudel on tarkvaraarenduse elutsükli mudel, kus ei järgitata konkreetset protsessi. Arendus algab vajalike ressursside ja pingutuste sisendiga, mille tulemusena valmib tarkvara, mis võib vastata või mitte vastata kliendi nõuetele. Selle mudeli puhul <b>puudub kindel protsess</b> või protseduur ning planeerimine on minimaalse või puudub üldse. Kliendil on sageli ebakindel arusaam oma täpsetest vajadustest, mistõttu nõuded rakendatakse paindlikult ja analüüsimata. Big Bang mudelit kasutatakse tavaliselt väikeste projektide puhul, kus arendusmeeskonnad on väga väikesed.
     </p>
-    <h2>mudeli etapid on järgmised:</h2>
+    <h2>Big Bang arendusmudeli etapid <i>võivad olla</i> järgmised:</h2>
     <ol>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
+        <li><b>Algatus</b></li>
+        <p>Projekti käivitamine vajalike ressursside ja investeeringute kindlaksmääramisega.</p>
+        <li><b>Arendus</b></li>
+        <p>Kogu arendustegevuse keskendumine koodi kirjutamisele ja tarkvara loomisele ilma eelneva planeerimiseta.</p>
+        <li><b>Testimine ja juurutamine</b></li>
+        <p>Valminud tarkvara testimine ja kasutuskeskkonda juurutamine, sageli ilma põhjaliku kvaliteedikontrollita.</p>
+        <li><b>Tagasiside ja parendamine</b></li>
+        <p>Kliendi tagasiside põhjal tehtavad parandused ja täiendused, mis võivad vajada kogu tarkvara ümberkujundamist.</p>
     </ol>
     <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="schema_placeholder", alt="mudeli visuaalne skeem"/>
+    <img src="../pildid/bigbang schema.png", alt="Big Bang arendusmudeli visuaalne skeem"/>
     <table>
         <tr>
-            <td><b>mudeli head</b></td>
-            <td><b>mudeli vead</b></td>
+            <td><b>Big Bang arendusmudeli head</b></td>
+            <td><b>Big Bang arendusmudeli vead</b></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Mudel on väga lihtne ja ei nõua keerulist planeerimist või dokumentatsiooni.</td>
+            <td> Suured ebakindlused ja riskid, kuna nõuded võivad muutuda või olla valesti mõistetud, mis võib viia projekti täieliku ebaõnnestumiseni.</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Arendajad saavad kiiresti reageerida muutuvatele nõuetele ja teha koheseid muudatusi.</td>
+            <td>Mudel ei sobi hästi keerukate ja objektorienteeritud projektide jaoks, kuna puudub struktuur ja korralik planeerimine.</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Projekti alustamine on kiire, kuna planeerimine on minimaalne või puudub üldse.</td>
+            <td>Piiratud või puuduv dokumentatsioon võib raskendada tulevikus tarkvara hooldust ja arendust.</td>
         </tr>
     </table>
+    <p>Big Bang arendusmudel on lihtne ja paindlik lähenemine tarkvaraarendusele, mis sobib väikestele ja vähem keerukatele projektidele. Kuigi mudel võimaldab kiiret arendust ja vähest planeerimist, kaasnevad sellega kõrged riskid ning see ei sobi hästi suurematele või keerukamatele projektidele. Suur sõltuvus arendajate oskustest ja paindlikkusest võib viia projektide ebaõnnestumiseni, eriti kui nõuded muutuvad või on alguses ebamäärased.</p>
     <h2>Link kasutatud materjalile:</h2>
-    <a href="add_sauce">Link</a>
+    <a href="https://www.tutorialspoint.com/sdlc/sdlc_bigbang_model.htm">Link</a>
     </br>
     </br>
-    <img src="gif_placeholder">
+    <img src="../pildid/big-bang.gif">
 </body>
 </html>
