lisan DevOps konspekt

--- a/elutsykkel/devops.html
+++ b/elutsykkel/devops.html
@@ -6,44 +6,56 @@
     <title>DevOps arendusmudel</title>
 </head>
 <body>
-    <h1>mudel</h1>
-    <p>description
+    <h1>DevOps arendusmudel</h1>
+    <p>
+        DevOps on arendusmudel, mis ühendab tarkvaraarenduse ja IT-operatsioonide meeskonnad, luues pideva ja sujuva tööprotsessi. See põhineb kultuurilisel muutusel, rõhutades meeskondade koostööd, protsesside automatiseerimist ja iteratiivset täiustamist. DevOps algas 2007. aastal, kui traditsioonilise arendusmudeli puudused tõid esile vajaduse tihedamaks integreerimiseks. Mudel aitab parandada tarkvara väljastamise kiirust ja kvaliteeti, kaotades siloefekti arendus- ja operatsioonimeeskondade vahel.
     </p>
-    <h2>mudeli etapid on järgmised:</h2>
+    <h2>DevOps arendusmudeli etapid on järgmised:</h2>
     <ol>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
+        <li><b>Planeerimine</b></li>
+        <p>Projektide ja funktsioonide planeerimine vastavalt vajadustele.</p>
+        <li><b>Arendus</b></li>
+        <p>Koodi kirjutamine ja integreerimine.</p>
+        <li><b>Ehitamine</b></li>
+        <p>Tarkvara koostamine ja ettevalmistamine.</p>
+        <li><b>Testimine</b></li>
+        <p>Automatiseeritud testid, et tagada kvaliteet.</p>
+        <li><b>Väljastamine</b></li>
+        <p>Uute versioonide juurutamine.</p>
+        <li><b>Kasutamine</b></li>
+        <p>Tarkvara käivitamine ja haldamine.</p>
+        <li><b>Jälgimine</b></li>
+        <p>Süsteemi jälgimine ja vigade tuvastamine.</p>
+        <li><b>Tagasiside</b></li>
+        <p>Kogutud andmete põhjal muudatuste tegemine.</p>
     </ol>
     <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="schema_placeholder", alt="mudeli visuaalne skeem"/>
+    <img src="../pildid/devops chema.png", alt="DevOps arendusmudeli visuaalne skeem"/>
     <table>
         <tr>
-            <td><b>mudeli head</b></td>
-            <td><b>mudeli vead</b></td>
+            <td><b>DevOps arendusmudeli head</b></td>
+            <td><b>DevOps arendusmudeli vead</b></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Automatiseeritud protsessid kiirendavad tarkvara arendustsüklit.</td>
+            <td>Traditsiooniliste protsesside muutmine võib organisatsioonis vastupanu tekitada.</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Pidev testimine ja koostöö parandavad lõpptoodet.</td>
+            <td>Automatiseerimis- ja jälgimistööriistade seadistamine nõuab teadmisi ja ressursse.</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Arendus- ja operatsioonimeeskondade tihe koostöö vähendab konflikte ja parandab tulemust.</td>
+            <td>Nõuab olulisi ressursse tööriistade ja koolituse jaoks.</td>
         </tr>
     </table>
+    <p>
+        DevOps on tänapäevane arendusmudel, mis sobib dünaamilise ja kvaliteetse tarkvaraarenduse jaoks. See rõhutab koostööd, kiirust ja pidevat täiustamist, kuid nõuab kultuurilist ja tehnilist pühendumist, et saavutada parimaid tulemusi. DevOps aitab ettevõtetel kohaneda kiirelt muutuva turuga, pakkudes klientidele paremat ja usaldusväärsemat tarkvara.
+    </p>
     <h2>Link kasutatud materjalile:</h2>
-    <a href="add_sauce">Link</a>
+    <a href="https://www.atlassian.com/devops">Link</a>
     </br>
     </br>
-    <img src="gif_placeholder">
+    <img src="../pildid/devops.gif">
 </body>
 </html>
