parandasin piltide suuruts DevOps konspektis

--- a/elutsykkel/devops.html
+++ b/elutsykkel/devops.html
@@ -30,7 +30,7 @@
         <p>Kogutud andmete põhjal muudatuste tegemine.</p>
     </ol>
     <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="../pildid/devops chema.png", alt="DevOps arendusmudeli visuaalne skeem"/>
+    <img src="../pildid/devops chema.png", height="400" alt="DevOps arendusmudeli visuaalne skeem"/>
     <table>
         <tr>
             <td><b>DevOps arendusmudeli head</b></td>
