lisan XP konspekt

--- a/elutsykkel/devops.html
+++ b/elutsykkel/devops.html
@@ -56,6 +56,6 @@
     <a href="https://www.atlassian.com/devops">Link</a>
     </br>
     </br>
-    <img src="../pildid/devops.gif">
+    <img src="../pildid/devops.gif", height="400">
 </body>
 </html>
