--- a/elutsykkel/xp.html
+++ b/elutsykkel/xp.html
@@ -3,47 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>(XP) Ekstreem Programming arendusmudel</title>
+    <title>(XP) Extreme Programming arendusmudel</title>
 </head>
 <body>
-    <h1>mudel</h1>
-    <p>description
+    <h1>(XP) Extreme pogramming arendusmudel</h1>
+    <p>
+        Extreme Programming (XP) on agiilne tarkvaraarendusmudel, mille eesmärk on tarnida kõrgekvaliteedilist tarkvara läbi kiire tagasiside, tiheda koostöö ja kohanemisvõime. XP keskendub iteratiivsele arendusele, lihtsusele ja pidevale testimisele. Arendusmeeskond, kliendid ja osapooled teevad koostööd, et tagada tarkvara vastavus muutuvatele nõudmistele.
     </p>
-    <h2>mudeli etapid on järgmised:</h2>
+    <img src="../pildid/xp schema2.jpg", height="400", alt="XP arendusmudel"/>
+    <h2>XP arendusmudeli etapid on järgmised:</h2>
     <ol>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
-        <li><b></b></li>
-        <p></p>
+        <li><b>Planeerimine</b></li>
+        <p>Klient kirjeldab kasutajalugusid, mille põhjal määratakse prioriteedid ja ajakava.</p>
+        <li><b>Disain</b></li>
+        <p>Disainitakse ainult hetkel vajalikud osad, hoides lahendused lihtsad ja selged.</p>
+        <li><b>Kodeerimine</b></li>
+        <p>Kasutatakse paarisprogrammeerimist ja testpõhist arendust (TDD/test-driven development), kus kood ja testid integreeritakse pidevalt.</p>
+        <li><b>Testimine</b></li>
+        <p>Pidevad ühik- ja aktsepteerimistestid tagavad tarkvara kvaliteedi ja kliendi nõuete täitmise.</p>
+        <li><b>Kuulamine</b></li>
+        <p>Regulaarsed kliendikohtumised tagasiside kogumiseks ja muudatuste tegemiseks.</p>
     </ol>
     <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="schema_placeholder", alt="mudeli visuaalne skeem"/>
+    <img src="../pildid/xp schema.jpg", height="400", alt="XP arendusmudeli visuaalne skeem"/>
     <table>
         <tr>
-            <td><b>mudeli head</b></td>
-            <td><b>mudeli vead</b></td>
+            <td><b>XP arendusmudeli head</b></td>
+            <td><b>XP arendusmudeli vead</b></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td> XP toetab hiliste muudatuste tegemist ja kiiret kohanemist.</td>
+            <td>Paarisprogrammeerimine ja pidev testimine nõuavad rohkem ressursse võrreldes traditsiooniliste meetoditega.</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>TDD ja pidev integreerimine aitavad vigu varakult leida ja kõrvaldada.</td>
+            <td>Ei pruugi hästi toimida suurtes või hajutatud meeskondades.</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Paarisprogrammeerimine ja kliendi kaasatus suurendavad meeskonnatööd ja mõistmist.
+            </td>
+            <td>Vajab kliendi tihedat kohalolekut, mis ei ole alati võimalik.</td>
         </tr>
     </table>
+    <p>
+        Extreme Programming on efektiivne metoodika projektides, kus nõuded muutuvad sageli ja kvaliteet on prioriteet. Selle tugevused seisnevad paindlikkuses, koostöös ja pidevas kvaliteedikontrollis. Samas võib XP olla ressursimahukas ja sobimatu suurtes organisatsioonides. Tänu iteratiivsele lähenemisele ja lihtsuse rõhutamisele aitab XP tarnida väärtust kliendile kiiresti ja tõhusalt.
+    </p>
     <h2>Link kasutatud materjalile:</h2>
-    <a href="add_sauce">Link</a>
+    <a href="https://www.geeksforgeeks.org/software-engineering-extreme-programming-xp/">Link</a>
     </br>
     </br>
-    <img src="gif_placeholder">
+    <img src="../pildid/xfl-xtreme.gif">
 </body>
 </html>
