lasasin lingid index faili

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
          <li> <a href="elutsykkel/inkrementaalne.html">Inkrementaalne arendusmudel</a> </li>
          <li> <a href="elutsykkel/spriraal.html">Spiraalmudel</a> </li>
          <li> <a href="elutsykkel/prototuupimine.html">Prototüüpimine</a> </li>
-         <li> <a href="casevahendid/main.html">CASE vahendid</a></li>
+         <li> <a href="elutsykkel/agile.html">Agile arendusmudel</a></li>
+         <li> <a href="elutsykkel/bigbang.html">Big Bang arendusmudek</a></li>
+         <li> <a href="elutsykkel/devops.html">DevOps arendusmudel</a></li>
+         <li> <a href="elutsykkel/vshape.html">V-shape arendusmudel</a></li>
+         <li> <a href="elutsykkel/xp.html">(XP) Extreme Programming</a></li>
       </ul>
       <br/>
       <br/>
@@ -32,12 +36,11 @@
             <td>Anna Fomina</td>
             <td>Olen õpilane</td>
             <td>Valgast</td>
-            <td> <img src="./pildid/minu-foto.jpg" height="300" alt="Anna Fomina portrait"></td>
+            <td> <img src="./pildid/minu-foto.jpg" height="300", alt="Anna Fomina portrait"></td>
          </tr>
          <tr>
             <td colspan="4"><a href="https://github.com/fomi-ann">Siin on minu github profiil</a></td>
          </tr>
       </table>
-      <p>test</p>
  </body>
  </html>
