täiendasin uppercase konspekti

--- a/casevahendid/lowercase.html
+++ b/casevahendid/lowercase.html
@@ -56,5 +56,12 @@
     <img src="../pildid/interface/xdebug_interface.jpg", height="600"  alt="Xdebug interface">
     
     <h2>Link kasutatud materjalile</h2>
+    <a href="https://code.visualstudio.com/docs/getstarted/getting-started">Visual Studio Code</a>
+    </br>
+    <a href="https://developer.chrome.com/docs/devtools/overview">Chrome Dev Tools</a>
+    </br>
+    <a href="https://www.jetbrains.com/pycharm/">PyCharm</a>
+    </br>
+    <a href="https://xdebug.org/docs/">Xdebug</a>
 </body>
 </html>
