--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
          <li> <a href="elutsykkel/devops.html">DevOps arendusmudel</a></li>
          <li> <a href="elutsykkel/vshape.html">V-shape arendusmudel</a></li>
          <li> <a href="elutsykkel/xp.html">(XP) Extreme Programming</a></li>
+         <li> <a href="casevahendid/main.html">CASE vahendid</a></li>
 
          
       </ul>
