--- a/elutsykkel/agile.html
+++ b/elutsykkel/agile.html
@@ -4,52 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agile arendusmudel</title>
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Agile arendusmudel</h1>
-    <p>
-        Agile arendusmudel on tarkvaraarendusmeetod, mis põhineb iteratiivsel arendusel. Selle eesmärk on pakkuda paindlikku ja kiiret lähenemist, jagades projekti väiksemateks osadeks ehk iteratsioonideks. Agile'i puhul on projektinõuded ja ulatus määratletud arendusprotsessi alguses, kuid igas iteratsioonis viiakse läbi täis tarkvaraarenduse elutsükkel, sealhulgas planeerimine, analüüs, disain, kodeerimine ja testimine. See aitab vähendada riske ja kiirendada projekti valmimisaega.
-    </p>
-    <h2>Agile arendusmudeli etapid on järgmised:</h2>
-    <ol>
-        <li><b>Nõuete kogumine</b></li>
-        <p>Määratletakse projekti nõuded ja analüüsitakse ärivõimalusi. Koostatakse plaanid projekti aja ja ressursivajaduse kohta, hinnatakse tehnilist ja majanduslikku teostatavust.</p>
-        <li><b>Nõuete disainimine</b></li>
-        <p>Koostöös huvigruppidega luuakse nõuded. Kasutatakse kasutajavoogude skeeme või UML-diagramme, et kirjeldada uute funktsioonide tööd ja nende integreerimist olemasolevasse süsteemi.</p>
-        <li><b>Ehitamine/iteratsioon</b></li>
-        <p>Meeskond alustab arendustööd, eesmärgiga luua minimaalne, kuid toimiv toode, mis läbib pidevat täiustamist.</p>
-        <li><b>Testimine</b></li>
-        <p>Kvaliteedikontrolli meeskond kontrollib toote jõudlust ja otsib vigu, et tagada toote kvaliteet.</p>
-        <li><b>Juurutamine</b></li>
-        <p>Toode viiakse kasutuskeskkonda, kus see on valmis lõppkasutajatele kättesaadavaks tegemiseks.</p>
-        <li><b>Tagasiside</b></li>
-        <p>Kasutajatelt saadakse tagasisidet toote kohta, mille põhjal tehakse parandusi ja täiendusi.</p> 
-    </ol>
-    <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="../pildid/agile schemal.png", alt="Agile arendusmudeli visuaalne skeem"/>
-    <table>
-        <tr>
-            <td><b>Agile arendusmudeli head</b></td>
-            <td><b>Agile arendusmudeli vead</b></td>
-        </tr>
-        <tr>
-            <td>Muudatusi saab hõlpsasti integreerida projekti käigus.</td>
-            <td>Kiire arendustempo tõttu võib dokumentatsiooni tase olla madal.</td>
-        </tr>
-        <tr>
-            <td>Iga iteratsiooni lõpus näidatakse töötavat toodet kliendile, mis võimaldab kiiret tagasisidet ja korrigeerimist.</td>
-            <td>Kuigi algne ulatus on määratletud, võib pidev tagasiside ja muutused põhjustada ulatuse laienemist.</td>
-        </tr>
-        <tr>
-            <td>Iteratsioonide kasutamine vähendab üldist projekti valmimisaega.</td>
-            <td>Agile nõuab tihedat koostööd ja kogenud meeskonda, mis võib olla ressursimahukas.</td>
-        </tr>
-    </table>
-    <p>Agile arendusmudel on kaasaegne ja paindlik lähenemine tarkvaraarendusele, mis jagab projekti väiksemateks osadeks, et vähendada riske ja parandada kliendirahulolu. Kuigi see pakub kiiret ja efektiivset arendust, nõuab see head meeskonna koostööd ja võib tekitada väljakutseid dokumentatsiooni ja ulatuse juhtimisel.</p>
-    <h2>Link kasutatud materjalile:</h2>
-    <a href="https://www.javatpoint.com/software-engineering-agile-model">Link</a>
-    </br>
-    </br>
-    <img src="../pildid/agile.gif">
+    <div class="container-md">
+        <div id="navbar"  class="sticky-top"></div>
+        <script src="../scripts/navbar.js"></script>
+
+        <h1>Agile arendusmudel</h1>
+
+        <p>
+            Agile arendusmudel on tarkvaraarendusmeetod, mis põhineb iteratiivsel arendusel. Selle eesmärk on pakkuda paindlikku ja kiiret lähenemist, jagades projekti väiksemateks osadeks ehk iteratsioonideks. Agile'i puhul on projektinõuded ja ulatus määratletud arendusprotsessi alguses, kuid igas iteratsioonis viiakse läbi täis tarkvaraarenduse elutsükkel, sealhulgas planeerimine, analüüs, disain, kodeerimine ja testimine. See aitab vähendada riske ja kiirendada projekti valmimisaega.
+        </p>
+        <h2>Agile arendusmudeli etapid on järgmised:</h2>
+        <ol>
+            <li><b>Nõuete kogumine</b></li>
+            <p>Määratletakse projekti nõuded ja analüüsitakse ärivõimalusi. Koostatakse plaanid projekti aja ja ressursivajaduse kohta, hinnatakse tehnilist ja majanduslikku teostatavust.</p>
+            <li><b>Nõuete disainimine</b></li>
+            <p>Koostöös huvigruppidega luuakse nõuded. Kasutatakse kasutajavoogude skeeme või UML-diagramme, et kirjeldada uute funktsioonide tööd ja nende integreerimist olemasolevasse süsteemi.</p>
+            <li><b>Ehitamine/iteratsioon</b></li>
+            <p>Meeskond alustab arendustööd, eesmärgiga luua minimaalne, kuid toimiv toode, mis läbib pidevat täiustamist.</p>
+            <li><b>Testimine</b></li>
+            <p>Kvaliteedikontrolli meeskond kontrollib toote jõudlust ja otsib vigu, et tagada toote kvaliteet.</p>
+            <li><b>Juurutamine</b></li>
+            <p>Toode viiakse kasutuskeskkonda, kus see on valmis lõppkasutajatele kättesaadavaks tegemiseks.</p>
+            <li><b>Tagasiside</b></li>
+            <p>Kasutajatelt saadakse tagasisidet toote kohta, mille põhjal tehakse parandusi ja täiendusi.</p> 
+        </ol>
+        <h2>Visuaalselt protsess näeb välja niimodi:</h2>
+        <img src="../pildid/agile schemal.png", alt="Agile arendusmudeli visuaalne skeem"/>
+        <table>
+            <tr>
+                <td><b>Agile arendusmudeli head</b></td>
+                <td><b>Agile arendusmudeli vead</b></td>
+            </tr>
+            <tr>
+                <td>Muudatusi saab hõlpsasti integreerida projekti käigus.</td>
+                <td>Kiire arendustempo tõttu võib dokumentatsiooni tase olla madal.</td>
+            </tr>
+            <tr>
+                <td>Iga iteratsiooni lõpus näidatakse töötavat toodet kliendile, mis võimaldab kiiret tagasisidet ja korrigeerimist.</td>
+                <td>Kuigi algne ulatus on määratletud, võib pidev tagasiside ja muutused põhjustada ulatuse laienemist.</td>
+            </tr>
+            <tr>
+                <td>Iteratsioonide kasutamine vähendab üldist projekti valmimisaega.</td>
+                <td>Agile nõuab tihedat koostööd ja kogenud meeskonda, mis võib olla ressursimahukas.</td>
+            </tr>
+        </table>
+        <p>Agile arendusmudel on kaasaegne ja paindlik lähenemine tarkvaraarendusele, mis jagab projekti väiksemateks osadeks, et vähendada riske ja parandada kliendirahulolu. Kuigi see pakub kiiret ja efektiivset arendust, nõuab see head meeskonna koostööd ja võib tekitada väljakutseid dokumentatsiooni ja ulatuse juhtimisel.</p>
+        <h2>Link kasutatud materjalile:</h2>
+        <a href="https://www.javatpoint.com/software-engineering-agile-model">Link</a>
+        </br>
+        </br>
+        <img src="../pildid/agile.gif">
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
