--- a/navbar.html
+++ b/navbar.html
@@ -18,16 +18,16 @@
                    Kõik minu konspektid
                  </a>
                  <ul class="dropdown-menu">
-                   <li><a class="dropdown-item" href="#">Waterfall</a></li>
-                   <li><a class="dropdown-item" href="#">Inkrementaalne</a></li>
-                   <li><a class="dropdown-item" href="#">Spiraalmudel</a></li>
-                   <li><a class="dropdown-item" href="#">Prototüüpimine</a></li>
-                   <li><a class="dropdown-item" href="#">Agile</a></li>
-                   <li><a class="dropdown-item" href="#">Big Bang</a></li>
-                   <li><a class="dropdown-item" href="#">DevOps</a></li>
-                   <li><a class="dropdown-item" href="#">V-shape</a></li>
-                   <li><a class="dropdown-item" href="#">XP</a></li>
-                   <li><a class="dropdown-item" href="#">CASE vahendid</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/waterfall.html">Waterfall</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/inkrementaalne.html">Inkrementaalne</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/spriraal.html">Spiraalmudel</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/prototuupimine.html">Prototüüpimine</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/agile.html">Agile</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/bigbang.html">Big Bang</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/devops.html">DevOps</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/vshape.html">V-shape</a></li>
+                   <li><a class="dropdown-item" href="../elutsykkel/xp.html">XP</a></li>
+                   <li><a class="dropdown-item" href="../casevahendid/main.html">CASE vahendid</a></li>
                  </ul>
                </li>
              
