--- a/elutsykkel/prototuupimine.html
+++ b/elutsykkel/prototuupimine.html
@@ -4,55 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototüüpimine</title>
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Prototüüpimine</h1>
-    <p>
-        Prototüüp on süsteemi esialgne versioon, mis aitab katsetada disainivõimalusi ja visualiseerida ideid. Seda saab kasutada erinevates arenduse etappides, näiteks nõuete analüüsis ja disaini faasis, et mõista ja valideerida kasutajavajadusi, uurida disainivalikuid ja planeerida kasutajaliidest.
-    </p>
-    <h2>Prototüüpimise etapid on järgmised:</h2>
-    <ol>
-        <li><b>Nõuete kogumine</b></li>
-        <p>Nõuded fikseeritakse üldisel tasemel, tuues esile punktid, mida hiljem täpsustatakse.</p>
-        <li><b>Kiire kavandamine</b></li>
-        <p>Keskendutakse nähtavatele osadele (sisendid, väljundid, vormid). Klient hindab prototüüpi ja täpsustab oma vajadusi.</p>
-        <li><b>Iteratsioon</b></li>
-        <p>Prototüüpi parandatakse ja täiendatakse kliendi rahulolu saavutamiseks, mis aitab arendajal mõista paremini kliendi soove.</p>
-    </ol>
-    <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="../pildid/prototype schema.jpeg", alt="Prototüüpimise visuaalne skeem"/>
-    <p>Prototüübi loomisel on oluline kasutada kiireid tööriistu, mis võimaldavad lühikese ajaga näidist luua. Prototüüp keskendub ebaselgetele funktsionaalsustele ega pea sisaldama kogu funktsionaalsust ega vigade kontrolli.</p>
-    <h2>Prototüübi tüübid</h2>
-    <ul>
-        <li><b>Ühekordne prototüüpimine (Throw away prototyping)</b></li>
-        <p>Prototüüp hävitatakse pärast kasutamist, kuna see ei sobi aluseks lõplikule süsteemile ega täida mittefunktsionaalseid nõudeid.</p>
-        <li><b>Evolutsiooniline prototüüpimine (Evolutionary prototyping)</b></li>
-        <p>Prototüüpi täiustatakse järk-järgult, kuni see jõuab lõpliku süsteemi versioonini.</p>
-        <li><b>Lisanduv prototüüpimine (Incremental prototyping)</b></li>
-        <p>Süsteemi arendatakse järjest väiksemate osadena, lisades uusi funktsioone inkrementaalselt.</p>
-    </ul>
-    <table>
-        <tr>
-            <td><b>Protptüüpimise head</b></td>
-            <td><b>Prototüüpimine vead</b></td>
-        </tr>
-        <tr>
-            <td>Suurenenud kasutusmugavus</td>
-            <td>Võib tekitada vale ootuse lõppversiooni kohta</td>
-        </tr>
-        <tr>
-            <td>Täpsem vastavus kasutajavajadustele</td>
-            <td>Kiire prototüübi arendamine võib nõuda täiendavaid ressursse ja aega</td>
-        </tr>
-        <tr>
-            <td>Vähenenud arenduskoormus</td>
-            <td>Prototüübis kasutatud kiired lahendused ei pruugi sobida lõpliku süsteemi arhitektuuriga</td>
-        </tr>
-    </table>
-    <h2>Link kasutatud materjalile:</h2>
-    <a href="https://eopearhiiv.edu.ee/e-kursused/eucip/arendus/1224_prototpimine.html">Link</a>
-    </br>
-    </br>
-    <img src="../pildid/spiderman-spiderman-outfit.gif">
+    <div class="container-md">
+        <div id="navbar"  class="sticky-top"></div>
+        <script src="../scripts/navbar.js"></script>
+        
+        <h1>Prototüüpimine</h1>
+        <p>
+            Prototüüp on süsteemi esialgne versioon, mis aitab katsetada disainivõimalusi ja visualiseerida ideid. Seda saab kasutada erinevates arenduse etappides, näiteks nõuete analüüsis ja disaini faasis, et mõista ja valideerida kasutajavajadusi, uurida disainivalikuid ja planeerida kasutajaliidest.
+        </p>
+        <h2>Prototüüpimise etapid on järgmised:</h2>
+        <ol>
+            <li><b>Nõuete kogumine</b></li>
+            <p>Nõuded fikseeritakse üldisel tasemel, tuues esile punktid, mida hiljem täpsustatakse.</p>
+            <li><b>Kiire kavandamine</b></li>
+            <p>Keskendutakse nähtavatele osadele (sisendid, väljundid, vormid). Klient hindab prototüüpi ja täpsustab oma vajadusi.</p>
+            <li><b>Iteratsioon</b></li>
+            <p>Prototüüpi parandatakse ja täiendatakse kliendi rahulolu saavutamiseks, mis aitab arendajal mõista paremini kliendi soove.</p>
+        </ol>
+        <h2>Visuaalselt protsess näeb välja niimodi:</h2>
+        <img src="../pildid/prototype schema.jpeg", alt="Prototüüpimise visuaalne skeem"/>
+        <p>Prototüübi loomisel on oluline kasutada kiireid tööriistu, mis võimaldavad lühikese ajaga näidist luua. Prototüüp keskendub ebaselgetele funktsionaalsustele ega pea sisaldama kogu funktsionaalsust ega vigade kontrolli.</p>
+        <h2>Prototüübi tüübid</h2>
+        <ul>
+            <li><b>Ühekordne prototüüpimine (Throw away prototyping)</b></li>
+            <p>Prototüüp hävitatakse pärast kasutamist, kuna see ei sobi aluseks lõplikule süsteemile ega täida mittefunktsionaalseid nõudeid.</p>
+            <li><b>Evolutsiooniline prototüüpimine (Evolutionary prototyping)</b></li>
+            <p>Prototüüpi täiustatakse järk-järgult, kuni see jõuab lõpliku süsteemi versioonini.</p>
+            <li><b>Lisanduv prototüüpimine (Incremental prototyping)</b></li>
+            <p>Süsteemi arendatakse järjest väiksemate osadena, lisades uusi funktsioone inkrementaalselt.</p>
+        </ul>
+        <table>
+            <tr>
+                <td><b>Protptüüpimise head</b></td>
+                <td><b>Prototüüpimine vead</b></td>
+            </tr>
+            <tr>
+                <td>Suurenenud kasutusmugavus</td>
+                <td>Võib tekitada vale ootuse lõppversiooni kohta</td>
+            </tr>
+            <tr>
+                <td>Täpsem vastavus kasutajavajadustele</td>
+                <td>Kiire prototüübi arendamine võib nõuda täiendavaid ressursse ja aega</td>
+            </tr>
+            <tr>
+                <td>Vähenenud arenduskoormus</td>
+                <td>Prototüübis kasutatud kiired lahendused ei pruugi sobida lõpliku süsteemi arhitektuuriga</td>
+            </tr>
+        </table>
+        <h2>Link kasutatud materjalile:</h2>
+        <a href="https://eopearhiiv.edu.ee/e-kursused/eucip/arendus/1224_prototpimine.html">Link</a>
+        </br>
+        </br>
+        <img src="../pildid/spiderman-spiderman-outfit.gif">
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
