--- a/elutsykkel/spriraal.html
+++ b/elutsykkel/spriraal.html
@@ -4,50 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spiraalmudel</title>
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Spiraalmudel</h1>
-    <p>
-        Spiraalmudel on iteratiivne arendusmudel, mille töötas välja Barry Boehm 1986. aastal. Spiraalmudelit esindab spiraali kuju, mis sümboliseerib arendustsüklite korduvat liikumist. Iga kordus keskendub erinevale arendusetapile, nagu teostatavuse uurimine, nõuete kirjeldamine, kavandamine ja realiseerimine. Ehitamine toimub inkrementaalselt, kuid kordusi ei tohi segi ajada tavapäraste arendusprotsessi faasidega.
-    </p>
-    <h2>Spiraalmudeli etapid on järgmised:</h2>
-    <ol>
-        <li><b>Eesmärkide seadmine (Objective setting)</b></li>
-        <p>Selles etapis määratakse korduse eesmärgid, protsessi piirangud, oodatavad tulemused, juhtimisplaan ja riskid. Samuti vaadatakse üle alternatiivsed strateegiad riskide vähendamiseks.</p>
-        <li><b>Riskide hindamine ja maandamine (Risk assessment and reduction)</b></li>
-        <p>Analüüsitakse kõiki leitud riske ning töötatakse välja maandamisstrateegiad (nt prototüübi loomine juhul, kui nõuded võivad olla ebaselged).</p>
-        <li><b>Arendus ja valideerimine (Development and validation)</b></li>
-        <p>Valitakse sobiv arendusmudel, mis arvestab riskide maandamist (nt kui kasutajaliides on riskiallikas, siis luuakse prototüübid).</p>
-        <li><b>Planeerimine (Planning)</b></li>
-        <p>Arendusprojekti ülevaatus ja otsus, kas minna järgmisele kordusele. Kui otsustatakse jätkata, koostatakse plaan järgmise etapi jaoks.</p>
-    </ol>
-    <h2>Visuaalselt protsess näeb välja niimodi:</h2>
-    <img src="../pildid/spiral schema.png", alt="Spiraalmudeli visuaalne skeem"/>
-    <table>
-        <tr>
-            <td><b>Spiraal mudeli head</b></td>
-            <td><b>Spiraal mudeli vead</b></td>
-        </tr>
-        <tr>
-            <td>Võimaldab varakult riskidega tegeleda ja neid maandada.</td>
-            <td>Keeruline juhtida ja planeerida, kuna riskide hindamine nõuab palju ressursse.</td>
-        </tr>
-        <tr>
-            <td>Arendustsüklite paindlikkus, mis võimaldab vajadusel muutusi.</td>
-            <td>Sobib halvasti väiksematele projektidele, kuna nõuab rohkem planeerimist ja eeltööd.</td>
-        </tr>
-        <tr>
-            <td>Varajane prototüüpide loomine, et paremini mõista ja visualiseerida nõudeid.</td>
-            <td>Kõrgemad kulud ja ajakulu, sest riskide hindamine ja maandamine võtab aega ja ressursse.</td>
-        </tr>
-    </table>
-    <p>
-        Spiraalmudel keskendub arendusprotsessis riskide hindamisele ja maandamisele. Iga kordus algab selgete eesmärkide seadmisest ja lõpeb nende saavutamise kontrollimisega. Spiraalmudelit kasutatakse siiski harva, kuid see on andnud olulise panuse iteratiivse arenduse ja riskijuhtimise mõistmisse.
-    </p>
-    <h2>Link kasutatud materjalile:</h2>
-    <a href="https://eopearhiiv.edu.ee/e-kursused/eucip/arendus/1223_spiraalmudel.html">Link</a>
-    </br>
-    </br>
-    <img src="../pildid/inception-nickelback.gif">
+    <div class="container-md">
+        <div id="navbar"  class="sticky-top"></div>
+        <script src="../scripts/navbar.js"></script>
+        
+        <h1>Spiraalmudel</h1>
+        <p>
+            Spiraalmudel on iteratiivne arendusmudel, mille töötas välja Barry Boehm 1986. aastal. Spiraalmudelit esindab spiraali kuju, mis sümboliseerib arendustsüklite korduvat liikumist. Iga kordus keskendub erinevale arendusetapile, nagu teostatavuse uurimine, nõuete kirjeldamine, kavandamine ja realiseerimine. Ehitamine toimub inkrementaalselt, kuid kordusi ei tohi segi ajada tavapäraste arendusprotsessi faasidega.
+        </p>
+        <h2>Spiraalmudeli etapid on järgmised:</h2>
+        <ol>
+            <li><b>Eesmärkide seadmine (Objective setting)</b></li>
+            <p>Selles etapis määratakse korduse eesmärgid, protsessi piirangud, oodatavad tulemused, juhtimisplaan ja riskid. Samuti vaadatakse üle alternatiivsed strateegiad riskide vähendamiseks.</p>
+            <li><b>Riskide hindamine ja maandamine (Risk assessment and reduction)</b></li>
+            <p>Analüüsitakse kõiki leitud riske ning töötatakse välja maandamisstrateegiad (nt prototüübi loomine juhul, kui nõuded võivad olla ebaselged).</p>
+            <li><b>Arendus ja valideerimine (Development and validation)</b></li>
+            <p>Valitakse sobiv arendusmudel, mis arvestab riskide maandamist (nt kui kasutajaliides on riskiallikas, siis luuakse prototüübid).</p>
+            <li><b>Planeerimine (Planning)</b></li>
+            <p>Arendusprojekti ülevaatus ja otsus, kas minna järgmisele kordusele. Kui otsustatakse jätkata, koostatakse plaan järgmise etapi jaoks.</p>
+        </ol>
+        <h2>Visuaalselt protsess näeb välja niimodi:</h2>
+        <img src="../pildid/spiral schema.png", alt="Spiraalmudeli visuaalne skeem"/>
+        <table>
+            <tr>
+                <td><b>Spiraal mudeli head</b></td>
+                <td><b>Spiraal mudeli vead</b></td>
+            </tr>
+            <tr>
+                <td>Võimaldab varakult riskidega tegeleda ja neid maandada.</td>
+                <td>Keeruline juhtida ja planeerida, kuna riskide hindamine nõuab palju ressursse.</td>
+            </tr>
+            <tr>
+                <td>Arendustsüklite paindlikkus, mis võimaldab vajadusel muutusi.</td>
+                <td>Sobib halvasti väiksematele projektidele, kuna nõuab rohkem planeerimist ja eeltööd.</td>
+            </tr>
+            <tr>
+                <td>Varajane prototüüpide loomine, et paremini mõista ja visualiseerida nõudeid.</td>
+                <td>Kõrgemad kulud ja ajakulu, sest riskide hindamine ja maandamine võtab aega ja ressursse.</td>
+            </tr>
+        </table>
+        <p>
+            Spiraalmudel keskendub arendusprotsessis riskide hindamisele ja maandamisele. Iga kordus algab selgete eesmärkide seadmisest ja lõpeb nende saavutamise kontrollimisega. Spiraalmudelit kasutatakse siiski harva, kuid see on andnud olulise panuse iteratiivse arenduse ja riskijuhtimise mõistmisse.
+        </p>
+        <h2>Link kasutatud materjalile:</h2>
+        <a href="https://eopearhiiv.edu.ee/e-kursused/eucip/arendus/1223_spiraalmudel.html">Link</a>
+        </br>
+        </br>
+        <img src="../pildid/inception-nickelback.gif">
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
