parandasin upper ja lower case vahendite lingid

--- a/casevahendid/main.html
+++ b/casevahendid/main.html
@@ -20,11 +20,11 @@
         <h2>Kuidas jaotatakse CASE vahemdeid</h2>
         <p>CASE vahendid jaotatakse järgmistesse kategooriatesse:
         <ul>
-            <li><a href="/casevahendid/uppercase.html">UPPER CASE tools</a> - „ülemise taseme" CASE vahendid</li>
+            <li><a href="uppercase.html">UPPER CASE tools</a> - „ülemise taseme" CASE vahendid</li>
                 <p>
                     Need on üldiselt kõikide tarkvaraprotsesside toetamiseks mõeldud vahendid, mis hõlmavad näiteks projektijuhtimise, analüüsi ja disaini tööriistu.
                 </p>
-                <li><a href="/casevahendid/lowercase.html">lower CASE tools</a> - „alumise taseme" CASE vahendid</li>
+                <li><a href="lowercase.html">lower CASE tools</a> - „alumise taseme" CASE vahendid</li>
                 <p>
                     Need on suunatud konkreetsete tarkvaraarenduse etappide (nt koodigeneratsioon, testimine) toetamiseks. Näiteks disainivahendid, testimisvahendid jne.
                 </p>
