add bitcoin calculator and uml diagram pages

--- a/UML Diagrams/flowchart.html
+++ b/UML Diagrams/flowchart.html
@@ -6,6 +6,13 @@
     <title>Flowchart diagrammid</title>
 </head>
 <body>
-    
+<!--
+    UML > Flowchart_
+    - Kirjeldab ära mis on Flowchart diagrammid
+    - Kus neid kasutatakse
+    - toob välja eraldi kujundite tähendused
+    - Viitab näidisena juba eelnevalt Bitcoinäpi tegemisel tehtud Vooskeemi juurde
+    - Viited infoallikaile
+-->  
 </body>
 </html>
