--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="elutsykkel/vshape.html" class="list-group-item list-group-item-action">V-shape arendusmudel</a>
             <a href="elutsykkel/xp.html" class="list-group-item list-group-item-action">(XP) Extreme Programming</a>
             <a href="casevahendid/main.html" class="list-group-item list-group-item-action">CASE vahendid</a>
+            <a href="bitcoin/bitcoin.html" class="list-group-item list-group-item-action">Bitcoin kalkulaator</a>
          </ul>
 
          <!--         
@@ -51,9 +52,9 @@
 
          <div class="d-flex justify-content-center">
             <div class="card mb-3" style="max-width: 720px">
-               <div class="row g-0">
-               <div class="col-md-4">
-                  <img src="./pildid/minu-foto.jpg" class="img-fluid rounded" alt="Anna Fomina portrait">
+               <div class="row g-2">
+               <div class="col-md-4 d-flex justify-content-center align-items-center" style="height: 300px; padding-left: 1rem;" >
+                  <img src="./pildid/avatar-the-last.jpg" id="avatar" alt="Leo">
                </div>
                <div class="col-md-8">
                      <div class="card-body">
@@ -89,7 +90,7 @@
                         </div>
                      </div>
                </div>
-               </div>
+            
             </div>
          </div>
 
