--- a/navbar.html
+++ b/navbar.html
@@ -28,6 +28,7 @@
                    <li><a class="dropdown-item" href="../elutsykkel/vshape.html">V-shape</a></li>
                    <li><a class="dropdown-item" href="../elutsykkel/xp.html">XP</a></li>
                    <li><a class="dropdown-item" href="../casevahendid/main.html">CASE vahendid</a></li>
+                   <li><a class="dropdown-item" href="../bitcoin/bitcoin.html">Bitcoin Calculator</a></li>
                  </ul>
                </li>
              
