--- a/casevahendid/uppercase.html
+++ b/casevahendid/uppercase.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPPERCASE vahendid</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -23,7 +23,22 @@
         <i>Näiteks: Jira, Confluence, draw.io, Trello, VersionOne, Asana, Balsamiq, Bitbucket, Jenkins, Docker, Microsoft Visio jt.</i>
         </p>
         <h2>Milliseid UPPERCASE vahendeid olen ise juba kasutanud</h2>
+        <!--
+        <div class="container-md" style="max-width: 720px">
+            
+            <div class="row g-0">
+                <div class="col-md-2">
+                    <h3>draw.io</h3>
+                    <img src="../pildid/logo/draw-io-logo.png", height="100" alt=" draw.io logo">
+                </div>
+                <div class="col-md-10">
+                    <h4>Mida tööristaga saab teha</h4>
+                    <p>Online tööriist skeemide ja diagrammide loomiseks, sealhulgas UML, vooskeemid ja andmemudelid. Sobib analüüsiks, projekteerimiseks, visuaalsete diagrammide loomiseks ja dokumentatsiooni genereerimiseks.</p>
         
+                </div> 
+            </div>     
+        </div>
+        --> 
         <h3>draw.io</h3>
         <img src="../pildid/logo/draw-io-logo.png", height="100" alt=" draw.io logo">
         <h4>Mida tööristaga saab teha</h4>
